     [gss-serv.c]
     whitspace KNF
   - markus@cvs.openbsd.org 2003/09/01 09:50:04
     [sshd_config.5]
     gss kex is not supported; sxw@inf.ed.ac.uk
   - markus@cvs.openbsd.org 2003/09/01 12:50:46
     [readconf.c]
     rm gssapidelegatecreds alias; never supported before
   - markus@cvs.openbsd.org 2003/09/01 13:52:18
     [ssh.h]
     rm whitespace

20030829
 - (bal) openbsd-compat/ clean up.  Considate headers, add in Id on our
   files, and added missing license to header.

20030826
 - (djm) Bug #629: Mark ssh_config option "pamauthenticationviakbdint"
   as deprecated. Remove mention from README.privsep. Patch from 
   aet AT cc.hut.fi
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/22 10:56:09
     [auth2.c auth2-gss.c auth.h compat.c compat.h gss-genr.c gss-serv-krb5.c
     gss-serv.c monitor.c monitor.h monitor_wrap.c monitor_wrap.h readconf.c
     readconf.h servconf.c servconf.h session.c session.h ssh-gss.h
     ssh_config.5 sshconnect2.c sshd_config sshd_config.5]
     support GSS API user authentication; patches from Simon Wilkinson,
     stripped down and tested by Jakob and myself.
   - markus@cvs.openbsd.org 2003/08/22 13:20:03
     [sshconnect2.c]
     remove support for "kerberos-2@ssh.com"
   - markus@cvs.openbsd.org 2003/08/22 13:22:27
     [auth2.c] (auth2-krb5.c removed)
     nuke "kerberos-2@ssh.com"
   - markus@cvs.openbsd.org 2003/08/22 20:55:06
     [LICENCE]
     add Simon Wilkinson
   - deraadt@cvs.openbsd.org 2003/08/24 17:36:52
     [monitor.c monitor_wrap.c sshconnect2.c]
     64 bit cleanups; markus ok
   - fgsch@cvs.openbsd.org 2003/08/25 08:13:09
     [sftp-int.c]
     fix div by zero when listing for filename lengths longer than width.
     markus@ ok.
   - djm@cvs.openbsd.org 2003/08/25 10:33:33
     [sshconnect2.c]
     fprintf->logit to silence login banner with "ssh -q"; ok markus@
 - (dtucker) [Makefile.in acconfig.h auth-krb5.c auth-pam.c auth-pam.h