@@ -1,4 +1,4 @@
-/*	$OpenBSD: readconf.h,v 1.54 2003/08/22 10:56:09 markus Exp $	*/
+/*	$OpenBSD: readconf.h,v 1.55 2003/09/01 18:15:50 markus Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -40,8 +40,6 @@ typedef struct {
 	int     hostbased_authentication;	/* ssh2's rhosts_rsa */
 	int     challenge_response_authentication;
 					/* Try S/Key or TIS, authentication. */
-	int     kerberos_authentication;	/* Try Kerberos authentication. */
-	int     kerberos_tgt_passing;	/* Try Kerberos TGT passing. */
 	int     gss_authentication;	/* Try GSS authentication */
 	int     gss_deleg_creds;	/* Delegate GSS credentials */
 	int     password_authentication;	/* Try password
